--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-
 * {
   margin: 0;
   padding: 0;
@@ -37,7 +36,7 @@ body {
   text-decoration: none;
 }
 
-/* movil menu */
+/* Hamburger (mobile) */
 .hamburger {
   display: none;
   flex-direction: column;
@@ -51,7 +50,7 @@ body {
   margin: 4px 0;
 }
 
-/* movil view */
+/* Mobile view */
 @media (max-width: 768px) {
   .hamburger {
     display: flex;
@@ -72,5 +71,4 @@ body {
     display: flex;
   }
 }
-
 
