--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-
 * {
   margin: 0;
   padding: 0;
@@ -48,7 +47,8 @@ body {
 
 /* Hamburger icon */
 .hamburger {
-  display: none; /* oculto en desktop */
+  display: none;
+  /* oculto en desktop */
   flex-direction: column;
   cursor: pointer;
   gap: 4px;
@@ -226,6 +226,33 @@ main h1 {
   }
 }
 
+/*about*/
+#about {
+  margin-top: 60px;
+  padding: 25px 20px;
+  background: rgba(255, 255, 255, 0.85);
+  border-radius: 15px;
+  box-shadow: 0 6px 20px rgba(0, 0, 0, 0.15);
+  max-width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
+
+#about h2 {
+  font-size: 28px;
+  margin-bottom: 15px;
+  color: #333;
+}
+
+#about p {
+  font-size: 16px;
+  margin-bottom: 12px;
+  line-height: 1.6;
+  color: #555;
+}
+
+
 
 @media (max-width: 768px) {
 
@@ -246,7 +273,7 @@ main h1 {
     position: absolute;
     top: 60px;
     right: 0;
-    background: rgba(0,0,0,0.9);
+    background: rgba(0, 0, 0, 0.9);
     width: 150px;
     padding: 15px;
     gap: 10px;
@@ -255,6 +282,7 @@ main h1 {
   }
 
   .menu.active {
-    display: flex; /* mostrar */
+    display: flex;
+    /* mostrar */
   }
 }
