--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@
 
 body {
   font-family: 'Segoe UI', sans-serif;
-  background: linear-gradient(135deg, #ff9a9e, #fad0c4);
+  background: linear-gradient(135deg, #4f8a3d , #e6fac4);
   min-height: 100vh;
   padding: 20px;
 }
@@ -77,7 +77,7 @@ main h1 {
   max-width: 800px;
   margin: 20px auto 40px auto;
   padding: 30px 25px;
-  background: rgba(255, 255, 255, 0.9);
+  background: #F7F7F7;
   /* fondo blanco semi-transparente */
   border-radius: 20px;
   box-shadow: 0 8px 25px rgba(0, 0, 0, 0.15);
@@ -132,7 +132,7 @@ main h1 {
 }
 
 .recipe-card {
-  background: white;
+  background: #F7F7F7;
   width: 100%;
   max-width: 700px;
   padding: 25px;
